# lemin

./: 4_paths  CMakeLists.txt  Makefile  crossing  crossing2  final_test  input  input2.map  invalid_test  lem-in  mult_int  test_MI  test_excluded_room  test_three_paths  test_trace  testcase1  trace_100map  trace_cmd  trace_comment  trace_mul_ways
42_lem-in_tools-master/: README.md
includes/: lemin.h
lem-in_generator-master/: test
src/: ants.c  ants_2.c  bring_balance_to_the_force_not_destroy_it.c  dijkstra.c  dijkstra_2.c  dijkstra_3.c  farm.c  farm_2.c  freeing_stuff.c  gnl.c  input2_handling.c  links_from_in_to_out_and_route_parts.c  main.c  printing_stuff.c  process_room.c  read_input.c  read_input1.c  read_input2.c  room.c  room_2.c  roomlist.c  roomlist_2.c  route.c  route_2.c  suurballe.c  suurballe_2.c
