cmake_minimum_required(VERSION 3.14)
project(lemin_second C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(printflib)

add_executable(lemin_second
        includes/lemin.h
        printflib/arg_list.c
        printflib/arg_list.h
        printflib/arg_list2.c
        printflib/check_extra_flags.c
        printflib/check_extra_flags2.c
        printflib/color_handling.c
        printflib/color_handling2.c
        printflib/django_stuff.c
        printflib/exp_handling.c
        printflib/flag_validation.c
        printflib/float_handling.c
        printflib/ft_atoi.c
        printflib/ft_bzero.c
        printflib/ft_calloc.c
        printflib/ft_cheer_me_up.c
        printflib/ft_countletters.c
        printflib/ft_destroy_t_map.c
        printflib/ft_destroy_t_vector.c
        printflib/ft_ftoa.c
        printflib/ft_ftoa2.c
        printflib/ft_isalnum.c
        printflib/ft_isalpha.c
        printflib/ft_isascii.c
        printflib/ft_isdigit.c
        printflib/ft_isprint.c
        printflib/ft_itoa.c
        printflib/ft_itoa_base.c
        printflib/ft_lst_add_tail.c
        printflib/ft_lst_elem_cpy.c
        printflib/ft_lstadd.c
        printflib/ft_lstcpy.c
        printflib/ft_lstdel.c
        printflib/ft_lstdel_elem.c
        printflib/ft_lstdelete.c
        printflib/ft_lstdelone.c
        printflib/ft_lstiter.c
        printflib/ft_lstmap.c
        printflib/ft_lstnew.c
        printflib/ft_make_t_map.c
        printflib/ft_make_t_vector.c
        printflib/ft_make_t_vector_2.c
        printflib/ft_memalloc.c
        printflib/ft_memccpy.c
        printflib/ft_memchr.c
        printflib/ft_memcmp.c
        printflib/ft_memcpy.c
        printflib/ft_memdel.c
        printflib/ft_memdup.c
        printflib/ft_memmove.c
        printflib/ft_memset.c
        printflib/ft_printf.c
        printflib/ft_printf.h
        printflib/ft_putchar.c
        printflib/ft_putchar_fd.c
        printflib/ft_putendl.c
        printflib/ft_putendl_fd.c
        printflib/ft_puterr.c
        printflib/ft_putnbr.c
        printflib/ft_putnbr_fd.c
        printflib/ft_putstr.c
        printflib/ft_putstr_fd.c
        printflib/ft_realloc.c
        printflib/ft_strcat.c
        printflib/ft_strchr.c
        printflib/ft_strclr.c
        printflib/ft_strcmp.c
        printflib/ft_strcpy.c
        printflib/ft_strdel.c
        printflib/ft_strdup.c
        printflib/ft_strequ.c
        printflib/ft_striter.c
        printflib/ft_striteri.c
        printflib/ft_strjoin.c
        printflib/ft_strlcat.c
        printflib/ft_strlen.c
        printflib/ft_strmap.c
        printflib/ft_strmapi.c
        printflib/ft_strncat.c
        printflib/ft_strncmp.c
        printflib/ft_strncpy.c
        printflib/ft_strnequ.c
        printflib/ft_strnew.c
        printflib/ft_strnstr.c
        printflib/ft_strrchr.c
        printflib/ft_strsplit.c
        printflib/ft_strstr.c
        printflib/ft_strsub.c
        printflib/ft_strtrim.c
        printflib/ft_tolower.c
        printflib/ft_toupper.c
        printflib/ft_utoa_base.c
        printflib/g_stuff_handling.c
        printflib/gap_flag.c
        printflib/handle_double_mod.c
        printflib/insert_replacement.c
        printflib/int_handling.c
        printflib/int_precision.c
        printflib/int_to_str.c
        printflib/libft.h
        printflib/make_arg_list.c
        printflib/make_arg_list2.c
        printflib/make_arg_list3.c
        printflib/make_arg_vector.c
        printflib/parse_for_arg.c
        printflib/plus_flag.c
        printflib/pointer_handlng.c
        printflib/print_unprintable.c
        printflib/string_handling.c
        printflib/timey_whimey.c
        src/gnl.c
        src/main.c src/read_input.c src/roomlist.c src/room.c src/dijkstra.c src/suurballe.c src/route.c src/ants.c src/farm.c src/freeing_stuff.c src/links_from_in_to_out_and_route_parts.c src/ants_2.c src/dijkstra_2.c src/dijkstra_3.c src/farm_2.c src/process_room.c src/read_input1.c src/read_input2.c src/room_2.c src/roomlist_2.c src/bring_balance_to_the_force_not_destroy_it.c src/route_2.c src/suurballe_2.c)
